Displaying locations from local room DB on UI list.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Location Viewer</string>
+    <string name="location_description">Location description</string>
+    <string name="location_name">Location name</string>
 </resources>
