--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,15 @@
     <string name="app_name">Location Viewer</string>
     <string name="location_description">Location description</string>
     <string name="location_name">Location name</string>
+    <string name="add">Add</string>
+    <string name="cancel">Cancel</string>
+    <string name="latitude">Latitude</string>
+    <string name="longitude">Longitude</string>
+
+
+    <string-array name="location_providers">
+        <item>GPS</item>
+        <item>Bluetooth</item>
+        <item>RFID</item>
+    </string-array>
 </resources>
